# modbus2zabbix

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  bootstrap.sh  configure.ac
src/: Makefile.in  definitions.h  helper.c  main.c  modbus2zabbix.h  modbus_service.c
